..F....... [ZBXNEXT-6966] fixed scrollbar style

--- a/sass/stylesheets/sass/components/dashboard/_widget-item.scss
+++ b/sass/stylesheets/sass/components/dashboard/_widget-item.scss
@@ -90,6 +90,8 @@ a.dashboard-grid-widget-item {
 	overflow-x: hidden;
 	color: inherit;
 
+	@extend %webkit-scrollbar;
+
 	&:focus,
 	&:hover,
 	&:visited {
